Ensure no background color behind inset image.

--- a/web/themes/custom/uscgov/components/uswds/usa_card/_override.scss
+++ b/web/themes/custom/uscgov/components/uswds/usa_card/_override.scss
@@ -20,8 +20,12 @@
   }
 }
 
-.usa-card__media--inset .usa-card__img img {
-  border-radius: 20px;
+.usa-card__media--inset .usa-card__img {
+  background-color: transparent;
+
+  img {
+    border-radius: 20px;
+  }
 }
 
 .usa-card__header {
